<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >


    <TextView
        android:id="@+id/privacy_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/large_font_size"
        android:text="@string/pricing_Policy" />

    <TextView
        android:id="@+id/base_fare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="left"
        android:textSize="@dimen/small_font_size"
        android:text="@string/Base_fare" />

    <TextView
        android:id="@+id/per_kilometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/small_font_size"
        android:text="@string/Per_Kilometer" />

    <TextView
        android:id="@+id/per_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="left"
        android:textSize="@dimen/small_font_size"
        android:text="@string/per_minute" />

    <TextView
        android:id="@+id/minimum_fare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="left"
        android:textSize="@dimen/small_font_size"
        android:text="@string/Minimum_fare" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="20dp"
        android:text="OK" />


</LinearLayout>
